fixes :spotbugs check